[package]
name = "cdwifi"
version = "0.1.1"
edition = "2021"
authors = ["MaximMaximS"]
license = "MIT-0"
description = " Simple login script for public WiFi in ČD trains"
readme = "README.md"
homepage = "https://github.com/MaximMaximS/cdwifi"
repository = "https://github.com/MaximMaximS/cdwifi"
categories = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.19"
