[package]
name = "cdwifi"
version = "0.1.3"
edition = "2021"
authors = ["MaximMaximS"]
license = "0BSD"
description = "Simple login tool for public wifi in ČD trains"
readme = "README.md"
homepage = "https://github.com/MaximMaximS/cdwifi"
repository = "https://github.com/MaximMaximS/cdwifi"
categories = ["command-line-utilities"]
keywords = ["wifi", "capnet"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking"] }
scraper = "0.19"
